# smiles-frugalprover

./: .gitignore  README.md  frugalproverBarannikov.md  pyproject.toml  requirements.txt
.github/workflows/: openrabbit.yml
configs/: README.md  base.yaml  pipeline.yaml  smoke.yaml
configs/budget/: deepseek_r1_distill_qwen_7b.yaml  mock.yaml
configs/extract/: deepseek_r1_distill_qwen_1.5b.yaml  null_baseline.yaml  synthetic.yaml
configs/sample/: small.yaml
configs/train/: compare_models.yaml  regression.yaml
data/: math_pool_large_part3.json
data/deepseek_r1_qwen7b/: budgets.jsonl  budgets.jsonl.meta.json  hidden_states.parquet.meta.json  id_map.json  problems.jsonl  problems.jsonl.meta.json
docs/: ARTIFACTS.md  ORACLE.md  RESEARCH_PLAN.md  extract_hidden_states_colab.ipynb  extract_hidden_states_deepseek_colab.ipynb
docs/geometry_pilot/: README.md
experiments/A_oracle/: README.md  calibration_cost.py  learning_curve.py  oracle.py
experiments/B_layers/: analyze.py
experiments/C_geometry/: id_vs_difficulty.py
extraction/: README_layer_poolings.md  generate_hidden_states.ipynb
pilot/: RESEARCH_PLAN.md  TEAM_PLAN.md  analyze.py  colab_budget_oracle_pilot.ipynb  data_prep.py  id_vs_difficulty.py  math_labeling_subset.json  math_labeling_subset_part1.json  math_labeling_subset_part2.json  math_labeling_subset_part3.json  math_pool_large.json  math_pool_large_part1.json  math_pool_large_part2.json  merge_results.py  smoke_test.py  split_subset.py
pilot/layer_poolings/: README.md  WORKING_WITH_PARQUET.md
pilot/layer_poolings/configs/: Qwen1_5B_math_mid_mean.yaml  config.example.yaml
pilot/layer_poolings/data/: Qwen1_5B_math_mid_mean.parquet
pilot/layer_poolings/notebooks/: generate_hidden_states.ipynb
pipeline/: data_prep.py  merge_results.py  smoke_test.py  split_subset.py
references/: DIMENSIONALITY_METHODS.md  MANIFEST.md  PIPELINE.md  survey.md
results/deepseek_r1_qwen7b/: README.md  RESULTS.md  config.yaml  metrics.json  predictions.jsonl
slides/: frugalprover.tex
slides/scripts/: compile.sh  update.sh
slides/static/: hse.sty  template.tex
src/frugalprover/: __init__.py  __main__.py  cli.py  paths.py
src/frugalprover/agent/: README.md  __init__.py  base.py
src/frugalprover/analysis/: __init__.py  _legacy_features.py  _records.py  calibration.py  geometry.py  id_estimators.py  layer_probe.py  learning_curve.py
src/frugalprover/common/: __init__.py  config.py  grading.py  io.py  paths.py  records.py
src/frugalprover/oracle/: __init__.py
src/frugalprover/oracle/budget/: __init__.py  base.py  mock.py  sweep.py
src/frugalprover/oracle/model/: __init__.py  base.py  classification.py  compare.py  dataset.py  features.py  regression.py
src/frugalprover/oracle/reporting/: __init__.py  report.py  runs.py
src/frugalprover/oracle/sample/: __init__.py  base.py  math_sampler.py
src/frugalprover/oracle/states/: __init__.py  base.py  hf_extractor.py  pooling.py  synthetic.py
