[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "frugalprover"
version = "0.1.0"
description = "FrugalProver pilot: shared library + per-direction experiments testing whether solve-effort is predictable from a small model's activations."
requires-python = ">=3.9"
# Local pipeline deps (CPU only). The Colab extraction notebooks install their
# own GPU stack (transformers/accelerate/torch+cuda) in their first cell.
dependencies = [
    "datasets",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "joblib",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
