[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "frugalprover"
version = "0.1.0"
description = "FrugalProver: a staged pipeline for predicting math-problem solve effort from a small model's hidden states."
requires-python = ">=3.9"
# Created during SMILES 2026.
authors = [
    { name = "Michael Leontiev", email = "michlea@yandex.ru" },     # HSE University
    { name = "Kirill Chernikov", email = "kmchernikov@itmo.ru" },   # ITMO University
    { name = "Nika Smirnova", email = "nika646470@gmail.com" },     # AIRI
    { name = "Alima Chekueva" },
]
# CPU-only core: sampling, oracle training, analysis, reporting. Generating
# text and reading hidden states needs the [gpu] extra; keeping torch out of
# the base install means the whole analysis path works on a laptop.
dependencies = [
    "datasets",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "joblib",
    "numpy",
    "pandas",
    "pyarrow",
    "pyyaml",
]

[project.optional-dependencies]
# transformers 5.x requires torch>=2.4 and silently disables all model classes
# on older torch ("AutoModel requires the PyTorch library but it was not
# found"). Capped at <5 so the extras install works on torch 2.3.x; lift the
# cap once you're on torch>=2.4 everywhere.
gpu = ["torch>=2.0", "transformers>=4.44,<5", "accelerate", "tqdm"]

[project.scripts]
frugalprover = "frugalprover.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
